# watcher-amazon

./: .env.example  AI_CONSUMER_FLOW.md  IMPLEMENTATION_AI_CONSUMER.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8375ffc143c8_add_newspaper_model.py
backend/app/: main.py
backend/app/ai/: README.md  __init__.py  base.py  consumer.py  gemini_client.py  nova_client.py
backend/app/api/: __init__.py  newspapers.py
backend/app/core/: config.py
backend/app/delivery/: web.py
backend/app/models/: __init__.py  news_task.py  newspaper.py
backend/app/schemas/: __init__.py  newspaper.py
backend/app/validators/: rss.py
backend/tests/: test_ai_consumer.py  test_api_sources.py  test_newspaper_model.py  test_nova_client.py  test_rss_validator.py
docker/postgres/: init.sql
frontend/: Dockerfile.prod
frontend/src/: App.tsx
frontend/src/features/auth/: LoginPage.tsx
frontend/src/features/newsItems/: NewsItemsPage.tsx
frontend/src/features/newsTasks/: EditNewsTaskModal.tsx  NewsTaskCard.tsx
frontend/src/features/newspaper/: NewspaperPage.tsx  PublicFrontPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
