[project]
name = "newswatcher-backend"
version = "0.1.0"
description = "NewsWatcher Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "fastcrud>=0.15.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "alembic>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "aiohttp>=3.13.3",
    "feedparser>=6.0.12",
    "telethon>=1.42.0",
    "boto3>=1.38.0",
    "apscheduler>=3.11.2",
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W"]  # pycodestyle errors, Pyflakes, pycodestyle warnings (includes whitespace)
ignore = ["F821"]  # Ignore undefined names in SQLAlchemy relationships

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]  # Allow long lines in migration files
"tests/*.py" = ["E501"]  # Allow long lines in test files
